--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,7 +11,7 @@ ports:
 
 tasks:
   - init: >
-      mysql -u root -e "create database laravel-crm" &&
+      mysql -u root -e "create database `laravel-crm`" &&
       cp .env.example .env &&
       sed -i "s|APP_URL=http://localhost|APP_URL=${GITPOD_WORKSPACE_URL}|g" .env &&
       sed -i "s|APP_URL=https://|APP_URL=https://8000-|g" .env &&
